# InsightHub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 59d41569e068_create_projects_and_datasets.py  7d3f9a21c4b8_add_dataset_quality_issues.py  d4004c929afe_add_users_table.py  fc41c050c932_add_dataset_file_path_and_profiles.py
app/: main.py
app/api/v1/: routes_auth.py  routes_datasets.py  routes_projects.py
app/cli/: seed_user.py
app/core/: config.py  dependencies.py  exceptions.py  logging.py  rate_limit.py  security.py
app/db/models/: __init__.py  dataset.py  dataset_profile.py  dataset_quality_issue.py  project.py  user.py
app/schemas/: dataset.py  insights.py  profile.py  project.py
app/services/: auth.py  datasets.py  profiling.py  projects.py  quality.py
app/workers/: __init__.py  celery_app.py  tasks.py
docker/: api.Dockerfile
docs/: progress-checkpoint.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.tsx
tests/: conftest.py
tests/api/: test_auth.py  test_dataset_insights.py  test_dataset_profile.py  test_datasets.py  test_projects.py  test_rate_limit.py
tests/cli/: test_seed_user.py
tests/db/: test_models.py  test_real_db.py
tests/services/: test_profiling.py  test_quality.py
tests/workers/: test_tasks.py
(+5 files in other folders)
