[tool.poetry]
name = "insighthub"
version = "0.1.0"
description = "InsightHub backend"
authors = ["Massimiliano Nicosia"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
sqlalchemy = "^2.0.45"
alembic = "^1.18.1"
psycopg = {extras = ["binary"], version = "^3.3.2"}
celery = {extras = ["redis"], version = "^5.4.0"}
pandas = "^3.0.3"
argon2-cffi = "^23.1.0"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
ruff = "^0.3.0"
black = "^24.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
